13Aug20=======================================================================
1. Improve the (displayed) RBN frequency weighting the skimmers' frequencies
   w.r.t majority view on each spot. Any skimmer that disagrees with a 
   gets docked a 'point' from their 'good' score (if any) and have a 'point'
   added to their 'bad' score. This score is then taked into account during
   the 'choosing the real frequency' process. If a skimmer agrees with the
   majority the process is reversed. To see this in action: set/deb rbnskim
06Aug20=======================================================================
1, Add CTY-3013 Prefixes
2. Make RBN more efficient. Start the process of skimmer node performance 
   caching. Add minimum quality allowed (at 2), which will be overrideable.
   The format of the rbn_cache has changed and so a full restart will occur.
3. Collect channel input/output stats. New command: show/data_stats to show
   them. 
4. Add local::lib qw{/spider/perl5lib} to store cpanm loaded modules just for
   DXSpider. This is done so that updates needed by future changes can be done
   as the sysop user and doesn't have to be done as root. This paves the way
   for UPDATE.pl which will pull down new modules that it needs automatically.
   When it's written, which will be soon. 
29Jul20=======================================================================
1. Add show/rbn command that allows one to see who is online and configured
   for RBN. See help sh/rbn for details.
2. Fixed issue with set/ve7cc mode adding unwanted newlines to output.
3. Attempted to make the QRG normalisation more "intelligent". This would be
   sooooooooo much easier if skimmers were calibrated more accurately.
4. Added CTY-3012 prefixes.
23Jul20=======================================================================
1. fix Filtering so that it does less of what it was doing badly, thus 
   the perl interpreter to do more of the work. Which means you *should* be